@@ -1,3 +1,3 @@
-71e1abdfc59613fe05fca2939f02e02d *./tests/data/lavf/lavf.caf
-90204 ./tests/data/lavf/lavf.caf
+6c97bfc8e455d5fb8b3b45806857a953 *./tests/data/lavf/lavf.caf
+90235 ./tests/data/lavf/lavf.caf
 ./tests/data/lavf/lavf.caf CRC=0xf1ae5536
