@@ -17,6 +17,7 @@ version <next>:
 - support for building DLLs using MSVC
 - LVF demuxer
 - ffescape tool
+- metadata (info chunk) support in CAF muxer
 
 
 version 1.0:
